加记录操作日志,不过未完善

--- a/cmd_console/demo/templates/base.html
+++ b/cmd_console/demo/templates/base.html
@@ -43,10 +43,9 @@
             <ul class="nav nav-pills nav-stacked">
                 <li><a href="/">首页</a></li>
                 <li><a href="/">执行命令</a></li>
-                <li><a href="/">不执行</a></li>
+                <li><a href="/">操作记录</a></li>
             </ul>
         </div>
     </div>
 </div>
 </body>
-
