--- a/cmd_console/demo/templates/base.html
+++ b/cmd_console/demo/templates/base.html
@@ -1,16 +1,15 @@
 <head>
-    <title>Cmd to Web</title>
+    <title>Classmate Tower</title>
     <meta charset="utf-8"/>
 
-    {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'demo/css/bootstrap.min.css' %}"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+      {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'demo/css/bootstrap.min.css' %}"/> 
     <link rel="stylesheet" type="text/css" href="{% static 'demo/css/dashboard.css' %}"/>
-
-    <!-- <link href="{% static 'demo/css/simple-sidebar.css' %}" rel="stylesheet"> -->
-    <!-- jQuery library -->
-    <script src={% static "demo/js/jquery.min.js" %}></script>
-    <!-- Latest compiled JavaScript -->
-    <script src={% static "demo/js/bootstrap.min.js" %}></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'demo/css/customized.css' %}"/>
+  
+    <script src={% static "demo/js/jquery.min.js" %}></script>    
+    <script src={% static "demo/js/bootstrap.min.js" %}></script> 
     <script src={% static "demo/js/custom.js" %}></script>
 </head>
 
@@ -27,13 +26,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/"><strong>Cmd to Web</strong></a>
+            <a class="navbar-brand" href="/"><strong>ClassMate Tower</strong></a>
         </div>
-
-        <div id="navbar" class="navbar-collapse collapse navbar-right inline">
-            <p>user</p>
-        </div>
-
     </div>
 </nav>
 
@@ -42,10 +36,18 @@
         <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-pills nav-stacked">
                 <li><a href="/">首页</a></li>
-                <li><a href="/">执行命令</a></li>
-                <li><a href="/">操作记录</a></li>
+                <li><a href="/demo/">执行命令</a></li>
+                <li><a href="/records/">操作记录</a></li>
             </ul>
         </div>
     </div>
 </div>
+<script>
+
+$(function() {  // 控制导航条颜色
+  $(this).parent().find(".active").removeClass("active");
+  var url = window.location.pathname;
+  $('ul.nav a[href="'+ url +'"]').parent().addClass('active');
+});
+</script>
 </body>
